create stop watch

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <div id="timerText">0.00</div>
-    <button id="start">START</button>
-    <button id="stop">STOP</button>
-    <button id="reset">RESET</button>
+    <div id="start">START</div>
+    <div id="stop">STOP</div>
+    <div id="reset">RESET</div>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
